# multi-mind-application

./: .env  DEPLOYMENT_GUIDE.md  README.md  a2as.yaml  main.py  memory_test.html  pyproject.toml  requirements.txt  simple_test.py  start-services.bat  start-services.sh  test_memory.py  vercel.json
api/: chatgpt.py  claude.py  gemini.py  grok.py  index.py  models.py
backend/: .env  chatgpt_llm.py  claude_llm.py  gemini_llm.py  grok_llm.py  models.py
frontend/: chat.html  index.html
frontend/css/: chat.css  landing.css  style.css
frontend/js/: chat.js  landing.js  main.js  new.js
